--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,6 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>JSON Duality Trials and Errors</name>
     <description>Use on your own risc</description>
-    <packaging>pom</packaging>
 
     <properties>
         <oradb23c.version>latest</oradb23c.version>
@@ -44,6 +43,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>jakarta.json</groupId>
             <artifactId>jakarta.json-api</artifactId>
             <version>2.1.1</version>
@@ -59,21 +68,35 @@
             <version>23.2.0.0</version>
         </dependency>
         <dependency>
-            <groupId>jakarta.persistence</groupId>
-            <artifactId>jakarta.persistence-api</artifactId>
-            <version>3.1.0</version>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.jpars</artifactId>
+            <version>${eclipselink.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-grizzly2-http</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-binding</artifactId>
+            <version>3.1.1</version>
+        </dependency>
     </dependencies>
 
-    <modules>
-        <module>jpa</module>
-        <module>web</module>
-        <module>app</module>
-    </modules>
-
-
     <build>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
 
         <pluginManagement>
             <plugins>
@@ -86,12 +109,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>3.2.0</version>
-                    <!-- Remove @ from delimiters -->
-                    <configuration>
-                        <delimiters>
-                            <delimiter>${*}</delimiter>
-                        </delimiters>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -110,6 +127,18 @@
         </pluginManagement>
 
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <!-- Remove @ from delimiters -->
+                <configuration>
+                    <delimiters>
+                        <delimiter>${*}</delimiter>
+                    </delimiters>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -117,19 +146,144 @@
                     <release>19</release>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                 <executions>
+                    <execution>
+                        <id>weaving</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>org.eclipse.persistence.tools.weaving.jpa.StaticWeave</mainClass>
+                            <arguments>
+                                <argument>-loglevel</argument>
+                                <argument>INFO</argument>
+                                <argument>-classpath</argument>
+                                <argument>${project.build.outputDirectory}</argument>
+                                <argument>${project.build.outputDirectory}</argument>
+                                <argument>${project.build.outputDirectory}</argument>
+                            </arguments>
+                            <cleanupDaemonThreads>false</cleanupDaemonThreads>
+                            <includeProjectDependencies>true</includeProjectDependencies>
+                            <skip>false</skip>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <configuration>
+                    <logStdout>true</logStdout>
+                    <images>
+                        <image>
+                            <alias>oradb</alias>
+                            <name>eclipselink.uk.oracle.com/infra/oradb23c:${oradb23c.version}</name>
+                            <run>
+                                <env>
+                                    <ORACLE_PDB>${oradb23c.db}</ORACLE_PDB>
+                                    <ORACLE_PWD>${oradb23c.dbaPass}</ORACLE_PWD>
+                                    <ORACLE_EDITION>standard</ORACLE_EDITION>
+                                </env>
+                                <hostname>${oradb23c.host}</hostname>
+                                <ports>
+                                    <port>${oradb23c.host}:${oradb23c.port}:${oradb23c.port}</port>
+                                    <port>${oradb23c.host}:${oradb23c.http}:${oradb23c.http}</port>
+                                </ports>
+                                <volumes>
+                                    <bind>${project.basedir}/scripts:/opt/oracle/scripts/startup</bind>
+                                </volumes>
+                                <wait>
+                                    <log>Completed: ALTER PLUGGABLE DATABASE ${oradb23c.db} SAVE STATE</log>
+                                    <time>600000</time>
+                                </wait>
+                            </run>
+                        </image>
+                    </images>
+                    <showLogs>true</showLogs>
+                    <startParallel>false</startParallel>
+                </configuration>
+            </plugin>
+
         </plugins>
 
     </build>
 
     <profiles>
+
         <profile>
             <id>jersey</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>http-server</id>
+                                <phase>integration-test</phase>
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                                <configuration>
+                                    <mainClass>com.oracle.jsonduality.web.JerseyMain</mainClass>
+                                    <cleanupDaemonThreads>false</cleanupDaemonThreads>
+                                    <includeProjectDependencies>true</includeProjectDependencies>
+                                    <skip>false</skip>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
+
         <profile>
             <id>startdb</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>io.fabric8</groupId>
+                        <artifactId>docker-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>oradb-run</id>
+                                <phase>pre-integration-test</phase>
+                                <goals>
+                                    <goal>start</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
+
+
         <profile>
             <id>stopdb</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>io.fabric8</groupId>
+                        <artifactId>docker-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>oradb-stop</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>stop</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
 
     </profiles>
